# agent-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent-skills  skills-lock.json
config/: CLAUDE.md
skills/agent-native/: SKILL.md
skills/agent-native/references/: layouts.md  principles.md  quality-rubric.md  tooling-profiles.md
skills/architect/: SKILL.md
skills/architect/references/: building-supplementary.md
skills/claude-spawn/: SKILL.md
skills/claude-spawn/scripts/: claude-spawn.sh
skills/codex-cli/: SKILL.md
skills/codex-cli/references/: examples.md  standard-schema.json
skills/create-image/: SKILL.md
skills/create-image/references/: prompting-guide.md
skills/create-image/scripts/: image_gen.py  main.py  pyproject.toml
skills/explainer/: SKILL.md
skills/explainer/references/: figure-specs.md  html-template.md  metaphor-design.md  prose-guide.md  report-template.md  slide-animations.md  slide-layouts.md  slide-template.md
skills/feedback-loops/: SKILL.md
skills/feedback-loops/references/: language-loops.md
skills/gwsctx/: SKILL.md
skills/image-slides/: SKILL.md
skills/image-slides/references/: 3d-effects.md  animations.md  base-css.md  (+3 more)
skills/pixi-animate/: SKILL.md
skills/spec-engineering/: SKILL.md
skills/terminal-velocity/: SKILL.md
skills/tester/: SKILL.md
tests/: agent-skills-add-source.sh  agent-skills-list-sources.sh  agent-skills-local.sh  agent-skills-old-lock-merge.sh  agent-skills-remove-source.sh  agent-skills-source-collision.sh  agent-skills-source-dangling.sh  agent-skills-sync.sh  agent-skills-update.sh
(+35 files in other folders)
